# CharacterRecognition

./: .gitignore  CMakeLists.txt  README.md
src/: CR.cpp  CR.h  OCR.cpp  OCR.h  calc.cpp  calc.h  data.cpp  data.h  main.cpp  olcPixelGameEngine.h
